# deeplake

./: Dockerfile  README.md  env.example  example_use.py  main.py  pyproject.toml  requirements.txt
codelake/: __init__.py  config.py  service.py  settings.py
codelake/generation/: __init__.py  code_generator.py
codelake/ingest/: __init__.py  documentation_ingest.py  updater.py
codelake/planning/: __init__.py  task_planner.py
codelake/retrieval/: __init__.py  enhanced_retriever.py
codelake/retrieval.py/: web_search.py
codelake/utils/: __init__.py  path_utils.py
sdk_codeassist/: service.py
sdk_codeassist/generation/: code_generator.py
sdk_codeassist/ingest/: documentation_ingest.py  updater.py
sdk_codeassist/planning/: task_planner.py
sdk_codeassist/retrieval/: enhanced_retriever.py  web_search.py
sdk_codeassist/utils/: path_utils.py
