[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codelake"
version = "0.1.0"
description = "Deep Lake-powered code generation that follows SDK specifications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "David", email = "example@example.com"}
]
keywords = ["ai", "code-generation", "deep-lake", "langchain", "vector-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.12",
    "GitPython>=3.1.44",
    "langchain>=0.3.21",
    "langchain_community>=0.3.20",
    "langchain_core>=0.3.48",
    "langchain_deeplake>=0.1.0",
    "langchain_openai>=0.3.10",
    "langchain_text_splitters>=0.3.7",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "Requests>=2.32.3",
    "rich>=13.9.4",
    "schedule>=1.2.2",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/codelake"
"Bug Tracker" = "https://github.com/yourusername/codelake/issues"

[project.scripts]
codelake = "codelake.main:main"

[tool.setuptools]
packages = ["codelake"]

[tool.setuptools.package-dir]
codelake = "codelake"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
